--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+        <li><a href="recipes/japanese-fried-chicken.html">Japanese Fried Chicken</a></li>
     </ul>
 </body>
 </html>
