--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>Asian Fried Chicken Recipes</h1>
+    <img src="./img/asian-fried-chicken.webp" alt="Asian Fried Chicken">
     <ul>
-        <li><a href="recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
-        <li><a href="recipes/japanese-fried-chicken.html">Japanese Fried Chicken</a></li>
-        <li><a href="recipes/taiwanese-fried-chicken.html">Taiwanese Fried Chicken</a></li>
+        <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+        <li><a href="./recipes/japanese-fried-chicken.html">Japanese Fried Chicken</a></li>
+        <li><a href="./recipes/taiwanese-fried-chicken.html">Taiwanese Fried Chicken</a></li>
     </ul>
 </body>
 </html>
