Add emphasis to original recipe links

--- a/recipes/japanese-fried-chicken.html
+++ b/recipes/japanese-fried-chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Japanese Fried Chicken</h1>
-    <p><a href="https://cooking.nytimes.com/recipes/1019428-karaage-japanese-fried-chicken" target="_blank" rel="noopener noreferrer">Recipe by Hannah Kirshner</a></p>
+    <p><a href="https://cooking.nytimes.com/recipes/1019428-karaage-japanese-fried-chicken" target="_blank" rel="noopener noreferrer"><em>Recipe by Hannah Kirshner</em></a></p>
     <img src="../img/japanese-fried-chicken.webp" alt="Japanese Fried Chicken">
     
     <h2>Description</h2>
