--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Korean Fried Chicken</h1>
-    <p><a href="https://cooking.nytimes.com/recipes/1012801-korean-fried-chicken" target="_blank" rel="noopener noreferrer">Recipe by Julia Moskin</a></p>
+    <p><a href="https://cooking.nytimes.com/recipes/1012801-korean-fried-chicken" target="_blank" rel="noopener noreferrer"><em>Recipe by Julia Moskin</em></a></p>
     <img src="../img/korean-fried-chicken.webp" alt="Korean Fried Chicken">
     
     <h2>Description</h2>
