--- a/recipes/taiwanese-fried-chicken.html
+++ b/recipes/taiwanese-fried-chicken.html
@@ -6,9 +6,8 @@
     <title>Taiwanese Fried Chicken</title>
 </head>
 <body>
-    
     <h1>Taiwanese Fried Chicken</h1>
-    <p><a href="https://cooking.nytimes.com/recipes/1021582-taiwanese-popcorn-chicken-with-fried-basil" target="_blank" rel="noopener noreferrer">Recipe by Sue Li</a></p>
+    <p><a href="https://cooking.nytimes.com/recipes/1021582-taiwanese-popcorn-chicken-with-fried-basil" target="_blank" rel="noopener noreferrer"><em>Recipe by Sue Li</em></a></p>
     <img src="../img/taiwanese-fried-chicken.jpg" alt="Taiwanese Fried Chicken">
     
     <h2>Description</h2>
@@ -36,6 +35,5 @@
         <li>Working in batches, add the battered chicken to the hot oil and fry until golden brown and crisp, 5 to 7 minutes. With a slotted spoon or spider, transfer fried chicken to a paper towel-lined plate and season each batch with peppercorn mixture.</li>
         <li>Fry basil leaves until translucent and crisp, 1 to 2 minutes, then scatter over the fried chicken. Serve with leftover peppercorn mixture for sprinkling to taste.</li>
     </ol>
-
 </body>
 </html>
